[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshscanner"
version = "0.1.0"
description = "Network scanner that identifies SSH hosts by their public key fingerprints"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joshua Schmidlkofer", email = "joshland@gmail.com"}
]
keywords = ["ssh", "scanner", "network", "security", "fingerprint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
]

dependencies = [
    "paramiko",
    "loguru",
    "typer",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
]

[project.scripts]
sshscanner = "scan:app"

[project.urls]
Homepage = "https://github.com/yourusername/sshscanner"
Repository = "https://github.com/yourusername/sshscanner"
Issues = "https://github.com/yourusername/sshscanner/issues"
